# SystemMonitor

./: README.md  environment.yml  pyproject.toml
SystemMonitor/: README.md  main.py
systemmonitor/: main.py  styles.css
