[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemmonitor"
version = "0.1.0"
description = "A CLI tool to monitor GPU memory usage."
authors = [{ name = "John Vivian" }]
dependencies = [
    "rich"
]

[tool.setuptools]
packages = ["systemmonitor"]

[project.entry-points.console_scripts]
system-monitor = "systemmonitor.main:main"

[tool.setuptools.package-data]
systemmonitor = ["styles.css"]